OSHB-228: Worker involvement: Some alignment issues

--- a/static/custom/modules/vertical/osh-outcomes-working-conditions/overall-opinion/overall-opinion.scss
+++ b/static/custom/modules/vertical/osh-outcomes-working-conditions/overall-opinion/overall-opinion.scss
@@ -97,7 +97,10 @@ dvt-radar-chart[chart-title="Worker involvement"]{
 			}			
 		}
 		text[text-anchor="middle"]{
-			transform: translateY(-1rem);
+		  -ms-transform: translateY(-1rem); 
+		  -webkit-transform: translateY(-1rem); 
+		  -moz-transform: translateY(-1rem); 
+		  transform: translateY(-1rem); 
 		}
 	}
 }
